@@ -92,6 +92,7 @@ set(LIBXMP_SRC_LIST
     src/loaders/chip_load.c
     src/loaders/abk_load.c
     src/loaders/coco_load.c
+    src/loaders/cocosong_load.c
     src/loaders/xmf_load.c
 )
 
