@@ -8,7 +8,7 @@ LOADERS	= xm_load.o mod_load.o s3m_load.o stm_load.o 669_load.o far_load.o \
 	  sym_load.o med2_load.o med3_load.o med4_load.o dbm_load.o umx_load.o \
 	  gdm_load.o pw_load.o gal5_load.o gal4_load.o mfp_load.o asylum_load.o \
 	  muse_load.o hmn_load.o mgt_load.o chip_load.o abk_load.o coco_load.o \
-	  xmf_load.o
+	  cocosong_load.o xmf_load.o
 
 LOADERS_OBJS	= common.o iff.o itsex.o lzw.o voltable.o sample.o vorbis.o \
 		  $(LOADERS)
