@@ -1,0 +1,106 @@
+                   .
+Coconizer
+18 72 4 1 1 6 125 23 0 64
+0 1 2 3 4 5 1 2 3 4 6 7 8 9 10 11 12 1 13 14 15 16 17
+255 1 0 noteman
+0 0 0 0 0 0 0
+0 0 0 0 0 0 0
+0 0 0 0 0 0 0
+0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
+0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
+255 255 128 0 0 0 0 0 0 0 0 0 0 0 0 0
+64 0 1 2 3
+64 4 5 6 7
+64 8 9 10 11
+64 12 13 14 15
+64 16 17 18 19
+64 20 21 22 23
+64 24 25 26 27
+64 28 29 30 31
+64 32 33 34 35
+64 36 37 38 39
+64 40 41 42 43
+64 44 45 46 47
+64 48 49 50 51
+64 52 53 54 55
+64 56 57 58 59
+64 60 61 62 63
+64 64 65 66 67
+64 68 69 70 71
+64 794e6a24d0d85a22517f5da6c03b678b
+64 bf619eac0cdf3f68d496ea9344137e8b
+64 bf619eac0cdf3f68d496ea9344137e8b
+64 507a707634f20c9f28aaa4f76b63face
+64 178d5fbd3a0c92cb3fed1c9451c1e762
+64 e677bee82996054b721b34543cac7224
+64 24cc5ca0f7cf8ef55ffbef50abec4401
+64 507a707634f20c9f28aaa4f76b63face
+64 38321a5e820c03c0a901ad24d086db6d
+64 706c2d209a2308f74a74e5956f021b40
+64 0521ff75a7b94b81371dfa47eb41b533
+64 bf619eac0cdf3f68d496ea9344137e8b
+64 563482eef050b7eb879ab50649708c3d
+64 46d795469b55a82a854e049ef43a033f
+64 f0d73bb26443c3cb5ee3d5ebe2cd6eca
+64 bf619eac0cdf3f68d496ea9344137e8b
+64 50b29f2d904d581d0a3a900951427828
+64 2f5197d8474d831121225281455d5e6e
+64 45b4c42a8b830409fa3e9ee6f1651de4
+64 bf619eac0cdf3f68d496ea9344137e8b
+64 2a370b9d875cbb2adb56d805764d2320
+64 a74d33fd8b072c6e7ae342a171ce5a3e
+64 6d2bd68131a6f9159dbbeb8af628a345
+64 39cab095684bcf951c945b727f8483c7
+64 da043af5aee34dd59e9d2fed5bff46ef
+64 a74d33fd8b072c6e7ae342a171ce5a3e
+64 4ab35bb4ab32cf32139c1d91cc98551a
+64 39cab095684bcf951c945b727f8483c7
+64 b9750d2a0523c08dd7b7056337545d59
+64 f688cecbbbcb4ddfa29dffd50c9942f9
+64 f9c8940a5605519ae251f9b1d8626592
+64 b6bc2574d4b18f9bb8664e02f3bbdcd0
+64 55fa728bacba6df1ddc2818cd8ceca8a
+64 35547ad297114cae783503fe3b62107a
+64 c79d044a405cec7df6c1482de83213e2
+64 4810f1be10569dfb368f8e43f4027306
+64 34212e0a2d4fb14458e005c4aff06f98
+64 48cfe45e97e4bc2f42da4fcf1c4c03e0
+64 596169dce5d875a5a09ceb6763fdcddf
+64 f0d73bb26443c3cb5ee3d5ebe2cd6eca
+64 7d42979eb67ed07fae2aabac3a05d557
+64 575dbff0acd579c81582a6df1675d66f
+64 a44311ed9c30309b405bb3841bf6d6cd
+64 0d470296c9315fe1802e78ab1845a04c
+64 166d666ecaefe889527cddbbb3a968a7
+64 1852901940722a097e70a4dddb15ddbd
+64 bf619eac0cdf3f68d496ea9344137e8b
+64 22fd9295cbdb24625ff132fa09be96eb
+64 7620aec1764837dfd818eb7cee377a6c
+64 21fa7768b2e0db161ef6ef339294d40c
+64 a6dbc7627b7baee797444db128bec805
+64 ab3f5b066139a5b9831fbc2540a23fa6
+64 00da1f3166f99b9126134327e54f716f
+64 df499887115f5d8e54e691364574f735
+64 0ff543d60f01d68966fe0b5cc68c2e80
+64 bf619eac0cdf3f68d496ea9344137e8b
+64 5d44b381e6332332a3b8d6fa11087a57
+64 36099ef16a6347017680688e797f6953
+64 bf619eac0cdf3f68d496ea9344137e8b
+64 bf619eac0cdf3f68d496ea9344137e8b
+64 41f5ab15ac294b7ba2dc906a832fc780
+64 aa7e4aa2a131a44077dac4ebe21b3b90
+64 bf619eac0cdf3f68d496ea9344137e8b
+64 bf619eac0cdf3f68d496ea9344137e8b
+64 8b3aaa0964ac2ab4fa9a97bb222f666a
+64 4d441bdf639483f1b9619d09fdda2973
+64 6d06df473445124f236c5c7b2d67f6c5
+64 2097a8799fb3ae4d6ceba923889203aa
+64 7a09556e4cfd6035bc4213d66a6be716
+64 6e24abe6b6cea34d51182d3d8f508f4e
+64 c693ce2e4b33aab146f62571b32ed1cc
+64 a4b1a444fcbc07f33e7bb6724363805b
+7000 0 0 0 98d1088eacc024df40282c278910d5f6 
+255 64 0
+0 64 0
+0 64 0
+255 64 0
